JSON.parse throws incorrect exception when called w/o arguments https://bugs.webkit.org/show_bug.cgi?id=198574

Patch by Alexey Shvayka <shvaikalesh@gmail.com> on 2019-06-06
Reviewed by Yusuke Suzuki.

Source/JavaScriptCore:

Always coerce first argument to string and attempt to parse it.
(steps 1-2 of https://tc39.github.io/ecma262/#sec-json.parse)

* runtime/JSONObject.cpp:
(JSC::JSONProtoFuncParse): Remove argumentCount check.

LayoutTests:

SyntaxError should be thrown if JSON.parse is called w/o arguments.
(steps 1-2 of https://tc39.github.io/ecma262/#sec-json.parse)

* js/dom/JSON-parse-expected.txt:

Canonical link: https://commits.webkit.org/212614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246162 268f45cc-cd09-0410-ab3c-d52691b4dbfc